--- a/contacto.css
+++ b/contacto.css
@@ -105,7 +105,7 @@ table{
 footer{ /* La etiqueta <footer>, sirve para el pie de nuestra página. */
 
     text-align: center;
-    background: url(imagenes/bg.jpg); /* Sirve para llamar a una imagen que tengamos y usarlo como fondo en el background. En el CSS, cuando hacemos referencia a la dirección 
+    background: url(bg.jpg); /* Sirve para llamar a una imagen que tengamos y usarlo como fondo en el background. En el CSS, cuando hacemos referencia a la dirección 
     de una imagen, usamos el valor url. */
     padding: 20px;
 
